# afQuantumSim

./: CMakeLists.txt  Doxyfile  LICENSE.txt  README.md  TODO  TODO.md  examples.cpp  quantum.cpp  quantum.h  quantum_algo.cpp  quantum_algo.h  quantum_gates.cpp  quantum_gates.h  quantum_visuals.cpp  quantum_visuals.h  simulation.cpp  stress_test.cpp  stress_test.h  tests.cpp  utils.cpp  utils.h
benchmark/: CMakeLists.txt  benchmark.cpp  qiskit_benchmark.py  qpp_benchmark.cpp  results.md
docs/: DIRECTORY_STRUCUTRE.md  REQUIREMENTS.md  TODO.md  USAGE.md
docs/licenses/Quantum++/: LICENSE
docs/licenses/nlopt/: AUTHORS  COPYING  COPYRIGHT
docs/licenses/qiskit/: AUTHORS  LICENSE.txt
examples/: CMakeLists.txt  basis_change.cpp  classic_2bit_adder.cpp  classical_gates.cpp  draw_circuit.cpp  entanglement.cpp  examples.cpp  fourier_transform.cpp  grover_search.cpp  helloworld.cpp  phase_estimation.cpp  qft_adder.cpp  quantum_counting.cpp  quantum_teleportation.cpp  shor.cpp  shor_algorithm.cpp  superposition.cpp  vqe.cpp  vqe_example.cpp  vqe_simulation.cpp  vqr.cpp  vqr_example.cpp
include/: quantum.h  quantum_algo.h  quantum_gates.h  quantum_visuals.h  utils.h  version.h
src/: quantum.cpp  quantum_algo.cpp  quantum_gates.cpp  quantum_visuals.cpp  utils.cpp
test/: CMakeLists.txt  stress_test.cpp  tests.cpp
